# interlink

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  DIRECTORY.md  LICENSE  README.md  justfile
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
config/: alice-peers.json  alice.mcp.json  bob-peers.json  bob.mcp.json  settings.alice.json  settings.bob.json
contrib/: peer-admin-guard.sh  praetor-bus.service
crates/duet-bus/: Cargo.toml
crates/duet-bus/src/: main.rs
crates/duet-chat/: Cargo.toml
crates/duet-chat/src/: main.rs
crates/duet-liveness/: Cargo.toml
crates/duet-liveness/src/: main.rs
crates/duet-mcp/: Cargo.toml
crates/duet-mcp/src/: lib.rs
docs/: AUTO-PROGRESS.md  DELIVERY.md  DEPLOY.md  DISCOVERY.md  PRESENCE.md  SESSIONS.md  demo.cast
npm/: install.js  package.json
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: interlink-listen.js  progress-nudge.js
plugin/skills/interlink/: SKILL.md
plugin/skills/praetor/: SKILL.md
scripts/: demo.sh
src/: agent.rs  bus.rs  identity.rs  lib.rs  policy.rs  route.rs  store.rs
