[package]
name = "duet-chat"
description = "MCP server exposing send/receive tools so a Claude Code agent can talk to a peer over duet-bus"
keywords = ["mcp", "claude-code", "agents", "ai", "chat"]
categories = ["command-line-utilities"]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "duet-chat"
path = "src/main.rs"

[dependencies]
duet-mcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
rmcp = { version = "2", features = ["server", "transport-io", "macros"] }
schemars = "1"
